Clarify resource object identification situations
When resolving resource objects from their identifiers, we need
to distinguish between having the primary identifier and not having one.
Moreover, when dealing with those identifiers, we need to ensure they
have, e.g., exactly one value.

To cover these needs, this commit provides specialized classes for
handling object identifiers and identification:

- ResourceObjectIdentifier
- ResourceObjectIdentifiers [WithPrimary, SecondaryOnly]
- (existing) ResourceObjectIdentification [WithPrimary, SecondaryOnly]

Signatures of various API and internal methods were changed to use
the above classes to precisely specify their requirements.
It facilitates the analysis of code, and repo queries in particular.

Other changes:
- Shadow repository queries were centralized into ShadowFinder
to allow easier analysis.

Work in progress. There are potentially breaking changes, like not
updating the (now immutable) identification when uid or name changes
in ConnectorInstanceConnIdImpl; simplifying (fixing?) conversion of
__NAME__ delta into side effects, and so on. These are to be tested.