@@ -42,6 +42,7 @@ import java.util.stream.Collectors;
 
 import static com.evolveum.midpoint.schema.util.ObjectTypeUtil.asObjectable;
 import static com.evolveum.midpoint.schema.util.ObjectTypeUtil.asPrismObject;
+import static com.evolveum.midpoint.util.MiscUtil.emptyIfNull;
 import static com.evolveum.midpoint.util.MiscUtil.stateCheck;
 
 /**
@@ -75,40 +76,6 @@ public class ShadowUtil {
             return null;
         }
         return attributesContainer.getSecondaryIdentifiers();
-    }
-
-    public static ResourceAttribute<String> getSecondaryIdentifier(PrismObject<? extends ShadowType> shadow) throws SchemaException {
-        Collection<ResourceAttribute<?>> secondaryIdentifiers = getSecondaryIdentifiers(shadow);
-        if (secondaryIdentifiers == null || secondaryIdentifiers.isEmpty()) {
-            return null;
-        }
-        if (secondaryIdentifiers.size() > 1) {
-            throw new SchemaException("Too many secondary identifiers in "+shadow+": "+secondaryIdentifiers);
-        }
-        return (ResourceAttribute<String>) secondaryIdentifiers.iterator().next();
-    }
-
-    public static Collection<ResourceAttribute<?>> getSecondaryIdentifiers(
-            @Nullable Collection<? extends ResourceAttribute<?>> identifiers,
-            @NotNull ResourceObjectDefinition objectClassDefinition) throws SchemaException {
-        if (identifiers == null) {
-            return null;
-        }
-        Collection<ResourceAttribute<?>> secondaryIdentifiers = new ArrayList<>();
-        for (ResourceAttribute<?> identifier: identifiers) {
-            if (objectClassDefinition.isSecondaryIdentifier(identifier.getElementName())) {
-                secondaryIdentifiers.add(identifier);
-            }
-        }
-        return secondaryIdentifiers;
-    }
-
-    public static String getSecondaryIdentifierRealValue(PrismObject<? extends ShadowType> shadow) throws SchemaException {
-        ResourceAttribute<String> secondaryIdentifier = getSecondaryIdentifier(shadow);
-        if (secondaryIdentifier == null) {
-            return null;
-        }
-        return secondaryIdentifier.getRealValue();
     }
 
     public static @Nullable Collection<ResourceAttribute<?>> getAllIdentifiers(PrismObject<? extends ShadowType> shadow) {
@@ -145,8 +112,8 @@ public class ShadowUtil {
     }
 
     /** Here we assume that the definition may not be applied yet. */
-    public static @NotNull Collection<Item<?, ?>> getAttributesRaw(PrismObject<? extends ShadowType> shadow) {
-        PrismContainer<?> attributesContainer = shadow.findContainer(ShadowType.F_ATTRIBUTES);
+    public static @NotNull Collection<Item<?, ?>> getAttributesRaw(@NotNull ShadowType shadow) {
+        PrismContainer<?> attributesContainer = shadow.asPrismObject().findContainer(ShadowType.F_ATTRIBUTES);
         if (attributesContainer != null && attributesContainer.hasAnyValue()) {
             return attributesContainer.getValue().getItems();
         } else {
@@ -268,30 +235,6 @@ public class ShadowUtil {
         return attribute.getRealValue();
     }
 
-    public static String getMultiStringAttributeValueAsSingle(ShadowType shadow, QName attrName) {
-        return getMultiStringAttributeValueAsSingle(shadow.asPrismObject(), attrName);
-    }
-
-
-    private static String getMultiStringAttributeValueAsSingle(PrismObject<ShadowType> shadow, QName attrName) {
-        PrismContainer<?> attributesContainer = shadow.findContainer(ShadowType.F_ATTRIBUTES);
-        if (attributesContainer == null) {
-            return null;
-        }
-        PrismProperty<String> attribute = attributesContainer.findProperty(ItemName.fromQName(attrName));
-        if (attribute == null) {
-            return null;
-        }
-        Collection<String> realValues = attribute.getRealValues();
-        if (realValues == null || realValues.isEmpty()) {
-            return null;
-        }
-        if (realValues.size() > 1) {
-            throw new IllegalStateException("More than one value in attribute "+attrName);
-        }
-        return realValues.iterator().next();
-    }
-
     public static <T> List<T> getAttributeValues(ShadowType shadowType, QName attrName) {
         return getAttributeValues(shadowType.asPrismObject(), attrName);
     }
@@ -316,7 +259,7 @@ public class ShadowUtil {
     }
 
     public static <T> T getAttributeValue(ShadowType shadowType, QName attrName) throws SchemaException {
-        return (T) getAttributeValue(shadowType.asPrismObject(), attrName);
+        return getAttributeValue(shadowType.asPrismObject(), attrName);
     }
 
     public static <T> T getAttributeValue(PrismObject<? extends ShadowType> shadow, QName attrName) throws SchemaException {
@@ -337,6 +280,7 @@ public class ShadowUtil {
 
     public static void setPasswordIncomplete(ShadowType shadow) throws SchemaException {
         PasswordType password = getOrCreateShadowPassword(shadow);
+        //noinspection unchecked
         PrismContainerValue<PasswordType> passwordContainer = password.asPrismContainerValue();
         PrismProperty<ProtectedStringType> valueProperty = passwordContainer.findOrCreateProperty(PasswordType.F_VALUE);
         valueProperty.setIncomplete(true);
@@ -382,6 +326,7 @@ public class ShadowUtil {
         PrismContainer<?> attributesContainer = shadow.findContainer(ShadowType.F_ATTRIBUTES);
         ResourceAttributeContainerDefinition racDef = ObjectFactory.createResourceAttributeContainerDefinition(
                 ShadowType.F_ATTRIBUTES, objectClassDefinition);
+        //noinspection unchecked,rawtypes
         attributesContainer.applyDefinition((PrismContainerDefinition) racDef, true);
     }
 
@@ -445,7 +390,7 @@ public class ShadowUtil {
         if (!QNameUtil.match(ShadowType.F_ATTRIBUTES, firstName)) {
             throw new SchemaException(message + ": first path segment is not "+ShadowType.F_ATTRIBUTES);
         }
-        if (attributePath.size() < 1) {
+        if (attributePath.isEmpty()) {
             throw new SchemaException(message + ": path too short ("+attributePath.size()+" segments)");
         }
         if (attributePath.size() > 2) {
@@ -480,7 +425,7 @@ public class ShadowUtil {
         }
 
         PrismContainerDefinition<ShadowAttributesType> attributesDefinition =
-                shadow.getDefinition().findContainerDefinition((ItemPath) ShadowType.F_ATTRIBUTES);
+                shadow.getDefinition().findContainerDefinition(ShadowType.F_ATTRIBUTES);
         checkConsistency(attributesDefinition, " object definition in "+desc);
     }
 
@@ -494,15 +439,6 @@ public class ShadowUtil {
         }
     }
 
-    // TODO is this correct?
-    public static boolean isAccount(ShadowType shadowType) {
-        if (shadowType.getKind() != null) {
-            return shadowType.getKind() == ShadowKindType.ACCOUNT;
-        } else {
-            return true;        // ???
-        }
-    }
-
     public static boolean isProtected(@Nullable ShadowType shadow) {
         return shadow != null && Boolean.TRUE.equals(shadow.isProtectedObject());
     }
@@ -513,8 +449,7 @@ public class ShadowUtil {
     }
 
     public static boolean isDead(ShadowType shadow) {
-        Boolean dead = shadow.isDead();
-        return dead != null && dead;
+        return Boolean.TRUE.equals(shadow.isDead());
     }
 
     public static boolean isDead(@NotNull PrismObject<ShadowType> shadow) {
@@ -676,7 +611,7 @@ public class ShadowUtil {
         }
         sb.append("shadow ");
         boolean first = true;
-        for(ResourceAttribute iattr: getPrimaryIdentifiers(shadow)) {
+        for (ResourceAttribute<?> iattr : emptyIfNull(getPrimaryIdentifiers(shadow))) {
             if (first) {
                 sb.append("[");
                 first  = false;
@@ -735,7 +670,7 @@ public class ShadowUtil {
             if (identifiers.size() == 1) {
                 PrismProperty<?> identifier = identifiers.iterator().next();
                 // Only single-valued identifiers
-                Collection<PrismPropertyValue<?>> values = (Collection) identifier.getValues();
+                Collection<? extends PrismPropertyValue<?>> values = identifier.getValues();
                 if (values.size() == 1) {
                     PrismPropertyValue<?> value = values.iterator().next();
                     // and only strings
@@ -785,19 +720,6 @@ public class ShadowUtil {
                         .isEmpty();
     }
 
-    public static ResourceAttribute<?> fixAttributePath(ResourceAttribute<?> attribute) throws SchemaException {
-        if (attribute == null) {
-            return null;
-        }
-        if (attribute.getPath().startsWithName(ShadowType.F_ATTRIBUTES)) {
-            return attribute;
-        }
-        ResourceAttribute<?> fixedAttribute = attribute.clone();
-        ResourceAttributeContainer container = ObjectFactory.createResourceAttributeContainer(ShadowType.F_ATTRIBUTES, null);
-        container.createNewValue().add(fixedAttribute);
-        return fixedAttribute;
-    }
-
     // TODO: may be useful to move to ResourceObjectClassDefinition later?
     public static void validateAttributeSchema(ShadowType shadow, ResourceObjectDefinition objectDefinition)
             throws SchemaException {
@@ -832,13 +754,13 @@ public class ShadowUtil {
             if (val == null) {
                 throw new SchemaException("Null value in attribute "+attrName);
             }
-//            LOGGER.info("MMMMMMMMMMMM: {}:{}\n   {} <-> {}", attrName, attrDef, expectedClass, val.getClass());
             if (!XmlTypeConverter.isMatchingType(expectedClass, val.getClass())) {
                 throw new SchemaException("Wrong value in attribute "+attrName+"; expected class "+attrDef.getTypeClass().getSimpleName()+", but was "+val.getClass());
             }
         }
     }
 
+    // TODO consider removal
     public static ProtectedStringType getPasswordValue(ShadowType shadowType) {
         if (shadowType == null) {
             return null;
@@ -951,17 +873,11 @@ public class ShadowUtil {
             List<ItemName> attributesToDelete = attributesContainer.getAttributes().stream()
                     .map(Item::getElementName)
                     .filter(attrName -> !objDef.isPrimaryIdentifier(attrName))
-                    .collect(Collectors.toList());
+                    .toList();
             for (ItemName attrName : attributesToDelete) {
                 attributesContainer.getValue().removeProperty(attrName);
             }
         }
-    }
-
-    public static List<ObjectReferenceType> selectLiveLinks(List<ObjectReferenceType> refs) {
-        return refs.stream()
-                .filter(ShadowUtil::isNotDead)
-                .collect(Collectors.toList());
     }
 
     /**
@@ -1014,18 +930,6 @@ public class ShadowUtil {
         return MiscUtil.requireNonNull(
                 shadow.getObjectClass(),
                 () -> "No object class in " + shadow);
-    }
-
-    public static boolean isPartiallyClassified(@NotNull ShadowType shadow) {
-        return isKnown(shadow.getKind())
-                && isNotKnown(shadow.getIntent());
-    }
-
-    public static void checkForPartialClassification(@NotNull ShadowType shadow) {
-        if (isPartiallyClassified(shadow)) {
-            // TODO reconsider logging level here
-            LOGGER.warn("{} is partially classified: kind = {}, intent = {}", shadow, shadow.getKind(), shadow.getIntent());
-        }
     }
 
     public static @NotNull ShadowKindType resolveDefault(ShadowKindType kind) {
